IRtest_out/global_init_expr.err
irs/global_init_expr.ll:15:58: error: '@C47' defined with type '<{ i32, i32, i32, [6 x i32] }>*' but expected '[3 x [3 x i32]]*'
  %v55 = getelementptr [3 x [3 x i32]], [3 x [3 x i32]]* @C47, i32 0, i32 0, i32 0
                                                         ^
1 error generated.
